# memory-allocation-test

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.c
