cmake_minimum_required(VERSION 3.20)
project(memory-allocation-test C)

set(CMAKE_C_STANDARD 11)

set (CMAKE_VERBOSE_MAKEFILE on)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(OUTPUT_FILENAME_SUFFIX ${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})

add_subdirectory(src)
